# vulkan_offscreen_renderer

./: CMakeLists.txt  _clang-format  vulkan_example.cpp
shaders/: shader.frag  shader.geom  shader.vert
